bug fix: make new line after white space(enter)

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -118,6 +118,7 @@ body {
   border-radius: 0.375rem;
   font-size: 0.875rem;
   transition: border-color 0.2s, box-shadow 0.2s;
+  white-space: pre-line;
 }
 
 .form-group input:focus,
