--- a/static/css/recipe_detail.css
+++ b/static/css/recipe_detail.css
@@ -229,6 +229,7 @@
   font-size: 1rem;
   line-height: 1.8;
   color: #555;
+  white-space: pre-line;
 }
 
 /* Numbered Directions */
@@ -344,6 +345,7 @@
   font-size: 0.95rem;
   line-height: 1.5;
   color: #555;
+  white-space: pre-line;
 }
 
 /* Recipe Tags */
