--- a/static/css/recipe_form.css
+++ b/static/css/recipe_form.css
@@ -103,6 +103,7 @@
   background-color: #fff7ed;
   border-radius: 0.375rem;
   border-left: 4px solid #ea580c;
+  white-space: pre-line;
 }
 
 .ingredient-helper i,
